--- a/index.html
+++ b/index.html
@@ -13,24 +13,53 @@
 	  <header>
 	     <h1>Comenzando con la fotograf&iacute;a</h1>
 	      <nav>
-	        <a href="#">Inicio</a>
+	            <a href="#">Inicio</a>
 		    <a href="#">Paisajes</a>
 		    <a href="#">Retratos</a>
 	      </nav>
 	  </header>
 	  
 	  <section>
-	     <div id="sect1">
+	    <div id="sect1">
 	        <img src="images/paisaje15.jpg" alt="paisaje.jpg"/>
-		 </div>
+	    </div>
 	  
-	     <div id="sect2">
-	      <img src="images/paisaje11.jpg" alt="paisaje.jpg"/>
-		  <img src="images/paisaje16.jpg" alt="paisaje.jpg"/>
-	     </div>
+	    <section id="sect2">
+	        <div id="paisajes">
+	           <img src="images/paisaje11.jpg" alt="paisaje.jpg"/>
+		</div>
+		<div id="retratos">
+		   <img src="images/paisaje16.jpg" alt="paisaje.jpg"/>
+		</div>
+	    </section>
 		 
 	  </section>
+	  
+	  <footer>
+              <div>
+                  <h1>Contacto</h1>
+                  <br>
+                  <p>luismiguel.puerto@hotmail.com</p>
+                  <p>354-356 liverpool Rd, Ashfiel</p>
+                  <p>0406095998</p>
+              </div>
+	      <div>
+                  <h1>Terminos</h1><br>
+                  <p>Conoce nuestros terminos y condiciones</p>
+              </div>
+	      <div>
+                  <h1>Redes Sociales</h1><br>
+                  <p>Facebook</p>
+                  <p>Instragram</p>
+                  <p>Twitter</p>
+                  
+              </div>
+              <div>
+                  <h1>Derechos</h1><br>
+                  <p>LuisPuerto©2019</p>
+              </div>
+	  </footer>
 	
-	</body>
+    </body>
 </html>
 	
